# SafetySearch

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  server.py
.github/: CODEOWNERS
safetyscore/: api_client.py  cosmetic.py  drug.py  food.py
safetyscore/tools/: common.py  cosmetic.py  drug.py  food.py
test_safetyscore/test_tools/: test_common_tools.py  test_cosmetic_tools.py  test_drug_tools.py  test_food_tools.py
