[project]
name = "safetysearch-mcp-server"
version = "0.1.0"
description = "A comprehensive MCP server providing FDA safety data across food, drug, and cosmetic categories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/surabhya/SafetySearch"
Repository = "https://github.com/surabhya/SafetySearch"
Issues = "https://github.com/surabhya/SafetySearch/issues"

[project.scripts]
safetysearch = "server:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
